# python3-cyberfusion-fast-redirect

./: .gitlab-ci.yml  .pre-commit-config.yaml  pyproject.toml
.run/: Template Python tests.run.xml
debian/: changelog  control  python3-cyberfusion-fast-redirect.postinst  rules
requirements/: dev.txt  test.txt
src/cyberfusion/FastRedirect/: settings.py
tests/feature_tests/endpoints/: test_redirect.py
